# Marine_Vision

./: .gitignore  LICENSE.md  README.md  Underwater Camera Calibration.md  Visual Odometry Pipeline.md
3D Printing Files/: Dive_Torch_Bottom_Clamp_biggerRadius.STL  L_bracket_boxToStrut.SLDPRT
3D Printing Files/Box to Strut/: L_Bracket.STL
3D Printing Files/Dive Torch/: Dive_Torch_Top_Clamp_biggerRadius.SLDPRT  Dive_Torch_Top_Clamp_biggerRadius.STL
3D Printing Files/GoPro Housing/: GoProHousing_to_Strut_Connector.SLDPRT  GoProHousing_to_Strut_Connector.STL
3D Printing Files/Pole to Strut/: PoleStrutCouple.SLDPRT  PoleStrutCouple_90x90.SLDPRT  PoleStrutCouple_90x90.STL
ROS_Workspace/: .gitignore  README.md
ROS_Workspace/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ROS_Workspace/devel/lib/ezo_prs/: ezo_prs_node  ezo_prs_sub
ROS_Workspace/devel/lib/gscam/: gscam  gscam_node
ROS_Workspace/devel/lib/pkgconfig/: exo_prs.pc  ezo_prs.pc  gscam.pc  jetson_csi_cam.pc  launch.pc  ros_deep_learning.pc  synchronize.pc  synchronizer.pc  vision_msgs.pc  xsens_mti_driver.pc
ROS_Workspace/devel/lib/ros_deep_learning/: detectnet  imagenet  segnet  video_output  video_source
ROS_Workspace/devel/lib/synchronize/: synchronize_node
ROS_Workspace/devel/lib/synchronizer/: synchronizer_node
ROS_Workspace/devel/lib/xsens_mti_driver/: xsens_mti_node
ROS_Workspace/devel/share/exo_prs/cmake/: exo_prsConfig.cmake
ROS_Workspace/devel/share/ezo_prs/cmake/: ezo_prsConfig.cmake
ROS_Workspace/devel/share/gennodejs/ros/vision_msgs/msg/: _index.js
ROS_Workspace/devel/share/gscam/cmake/: gscamConfig.cmake
ROS_Workspace/devel/share/jetson_csi_cam/cmake/: jetson_csi_camConfig.cmake
ROS_Workspace/devel/share/launch/cmake/: launchConfig.cmake
ROS_Workspace/devel/share/ros_deep_learning/cmake/: ros_deep_learningConfig.cmake
ROS_Workspace/devel/share/roseus/ros/vision_msgs/: manifest.l
ROS_Workspace/devel/share/synchronize/cmake/: synchronizeConfig.cmake
ROS_Workspace/devel/share/synchronizer/cmake/: synchronizerConfig.cmake
ROS_Workspace/devel/share/vision_msgs/cmake/: vision_msgs-msg-extras.cmake  vision_msgs-msg-paths.cmake  vision_msgsConfig.cmake
ROS_Workspace/devel/share/xsens_mti_driver/cmake/: xsens_mti_driverConfig.cmake
ROS_Workspace/src/: CMakeLists.txt
ROS_Workspace/src/ezo_prs/: CMakeLists.txt
ROS_Workspace/src/ezo_prs/launch/: ezo_prs_node.launch  ezo_prs_sub.launch
ROS_Workspace/src/launch/: package.xml
ROS_Workspace/src/ros_deep_learning/: CMakeLists.txt
ROS_Workspace/src/ros_deep_learning/launch/: two_video_sources.launch  video_source_1.launch
ROS_Workspace/src/ros_deep_learning/src/: node_video_source.cpp
ROS_Workspace/src/rosbag_manipulations/: CMakeLists.txt  package.xml
ROS_Workspace/src/rosbag_manipulations/src/: add_topics.cpp  join_bag.cpp
ROS_Workspace/src/synchronize/: CMakeLists.txt  README.md  package.xml
ROS_Workspace/src/synchronize/config/: stereo_inertial_synch_CompressedImage_params.yaml  stereo_inertial_synch_params.yaml  stereo_synch_CompressedImage_params.yaml  stereo_synch_params.yaml  synchronize_all_CompressedImage_params.yaml  synchronize_all_params.yaml
ROS_Workspace/src/synchronize/include/synchronize/: synchronize.h
ROS_Workspace/src/synchronize/launch/: stereo_inertial_synch_CompressedImage.launch  stereo_synch.launch  stereo_synch_CompressedImage.launch  synchronize_all.launch  synchronize_all_CompressedImage.launch
ROS_Workspace/src/synchronize/src/: stereo_inertial_synch.cpp  stereo_inertial_synch_CompressedImage.cpp  stereo_synch.cpp  stereo_synch_CompressedImage.cpp  synchronize_all.cpp  synchronize_all_CompressedImage.cpp
ROS_Workspace/src/synchronize/src/headers/: synchronize.cpp
ROS_Workspace/src/xsens_mti_driver/param/: xsens_mti_node.yaml
Sensor Rig Construction/: README.md
Sensor Rig Construction/3D Printing Files/Dive Torch/: Dive_Torch_Bottom_Clamp.SLDPRT
Sensor Rig Construction/3D Printing Files/Pole to Strut/: PoleStrutCouple.STL
Sensor Rig Construction/ROS_Workspace/src/ezo_prs/src/: ezo_prs_node.cpp  ezo_prs_sub.cpp
Sensor Rig Construction/ROS_Workspace/src/launch/src/: DataCollection.launch  StereoCalibrationRecord.launch  sensor_rosbag_record.launch  stereo_rosbag_record.launch
Sensor Rig Construction/ROS_Workspace/src/ros_deep_learning/launch/: video_source_0.launch  video_source_1.launch:Zone.Identifier
Sensor Rig Construction/ROS_Workspace/src/ros_deep_learning/src/: node_two_video_sources.cpp
Sensor Rig Construction/ROS_Workspace/src/rosbag_manipulations/: CMakeLists.txt
Sensor Rig Construction/ROS_Workspace/src/rosbag_manipulations/src/: join_bag.cpp  split_bag.cpp
Sensor Rig Construction/ROS_Workspace/src/synchronize/: README.md
Sensor Rig Construction/ROS_Workspace/src/synchronize/config/: stereo_inertial_synch_params.yaml
Sensor Rig Construction/ROS_Workspace/src/synchronize/include/synchronize/: public_simple_filter.h  synchronize.h  synchronize_helper.h
Sensor Rig Construction/ROS_Workspace/src/synchronize/launch/: stereo_inertial_synch.launch
Sensor Rig Construction/ROS_Workspace/src/synchronize/src/: stereo_synch.cpp  synchronize_all.cpp
Sensor Rig Construction/ROS_Workspace/src/synchronize/src/headers/: synchronize_helper.cpp
Sensor Rig Construction/ROS_Workspace/src/xsens_mti_driver/launch/: rviz.launch
Sensor Rig Construction/ROS_Workspace/src/xsens_mti_driver/rviz/: display_copy.rviz
Sensor_Rig/3D Printing Files/: 40x40_PoleStrutCouple.SLDPRT
Sensor_Rig/3D Printing Files/Case_for_Arducam_Mini_IMX477_Camera/: LICENSE.txt  README.txt
Sensor_Rig/3D Printing Files/Case_for_Arducam_Mini_IMX477_Camera/files/: Arducam_Mini_IMX477_BackCase.STL  Arducam_Mini_IMX477_BackCase_Edited.STL  Arducam_Mini_IMX477_FrontCase.STL
Underwater SLAM Dataset/: README.md
Visual Odometry Pipeline/: README.md
