<?xml version="1.0"?>
<package format="2">
  <name>bag_manipulations</name>
  <version>0.0.0</version>
  <description>The bag_manipulations package</description>
  <maintainer email="uctsharc@todo.todo">uctsharc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>

</package>