<?xml version="1.0"?>
<package format="2">
  <name>rosbag_manipulations</name>
  <version>0.0.0</version>
  <description>The rosbag_manipulations package</description>
  <maintainer email="uctsharc@todo.todo">uctsharc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_filters</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

</package>